# sample_mcp_playground

./: README.md  mcp_server.py  pyproject.toml  sample_agent.ipynb  sample_tools.ipynb
clients/: llm_client.py  mcp_client.py
