[project]
name = "mcp_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.2.2",
    "duckduckgo-search>=8.0.2",
    "gradio>=5.29.1",
    "httpx>=0.28.1",
    "huggingface>=0.0.1",
    "litellm>=1.71.0",
    "mcp==1.8.1",
    "redditwarp>=1.3.0",
    "tabulate>=0.9.0",
]
