[project]
name = "mcp_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.2.2",
    "duckduckgo-search>=8.0.2",
    "gradio>=5.29.1",
    "httpx>=0.28.1",
    "huggingface>=0.0.1",
    "ipykernel>=6.30.0",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "litellm>=1.71.0",
    "mcp==1.8.1",
    "redditwarp>=1.3.0",
    "scipy>=1.16.0",
    "smolagents>=1.20.0",
    "tabulate>=0.9.0",
]
